# StalkerOnline

./: .gitignore  @Client.bat  @LevelEditor.bat  @Server.bat  README.md  StalkerOnline.sln  client_remember_login.ini  database.json  imgui.ini  server.json
StalkerOnline.Bin/Level/: levl_01_Garbage.sollevel
StalkerOnline.Client/: Program.cs  StalkerOnline.Client.csproj
StalkerOnline.GameClient/: CMakeLists.txt
StalkerOnline.GameClient/src/: NetworkClient.cpp  NetworkClient.h  Packet.h  main.cpp
StalkerOnline.GameClient/src/Editor/: Dx11LevelEditorRenderer.cpp  Dx11LevelEditorRenderer.h  EditorScene.cpp  EditorScene.h  Heightmap.cpp  Heightmap.h  LevelEditor.cpp
StalkerOnline.GameClient/src/Engine/Renderer/: Dx11DebugTriangle.cpp  Dx11DebugTriangle.h  Dx11Renderer.cpp  Dx11Renderer.h  Dx11WorldRenderer.cpp  Dx11WorldRenderer.h
StalkerOnline.GameClient/src/SpeedTree/: SpeedTreeIntegration.cpp  SpeedTreeIntegration.h
StalkerOnline.GameClient/src/UI/: UiStyle.cpp  UiStyle.h
StalkerOnline.Server/: Program.cs  StalkerOnline.Server.csproj
StalkerOnline.Server/Config/: ServerConfig.cs
StalkerOnline.Server/Core/: ClientSession.cs  GameServer.cs  PacketRateLimitResult.cs  PacketRateLimiter.cs
StalkerOnline.Server/Database/: DatabaseConfig.cs  DatabaseConnectionFactory.cs  DatabaseInitializer.cs
StalkerOnline.Server/Game/: GameWorld.cs  InterestManager.cs  PlayerConnection.cs  WorldItem.cs  WorldItemDropResult.cs  WorldItemPickupResult.cs  WorldObject.cs  WorldObjectSnapshot.cs  WorldObjectType.cs  WorldPlayer.cs
StalkerOnline.Server/Services/: AccountModel.cs  AccountRepository.cs  AccountService.cs  CharacterRepository.cs  CharacterService.cs  InventoryItemModel.cs  InventoryModel.cs  InventoryRepository.cs  InventoryService.cs  ItemRepository.cs  ItemTemplateModel.cs  PasswordHasher.cs
StalkerOnline.Shared/: Class1.cs
StalkerOnline.Shared/Game/: DropItemMessages.cs  DropItemSerializer.cs  InventoryAddResult.cs  InventoryItem.cs  InventorySerializer.cs  InventorySnapshot.cs  NetVector3.cs  PickupItemMessages.cs  PickupItemSerializer.cs  PlayerConnection.cs  PlayerInventory.cs  PlayerMovementInput.cs  PlayerMovementSerializer.cs  PlayerSpawnInfo.cs  PlayerState.cs  PlayerStateSerializer.cs  PlayerWorldSerializer.cs  WorldItemSerializer.cs  WorldItemSpawnInfo.cs
StalkerOnline.Shared/Network/: NetworkMessageSerializer.cs  NetworkMessages.cs  PacketMessage.cs  PacketProtocol.cs  PacketReader.cs  PacketType.cs  PacketWriter.cs
